<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#211D44"
    tools:context=".Time">


    <Chronometer
        android:layout_width="wrap_content"
        android:id="@+id/time"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anchor"
        app:layout_constraintVertical_bias="0.279" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="290dp"
        android:layout_height="260dp"
        android:contentDescription="@string/content_im"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18"
        app:srcCompat="@drawable/bgcircle" />

    <ImageView
        android:id="@+id/anchor"
        android:layout_width="380dp"
        android:layout_height="360dp"
        android:contentDescription="@string/content_anc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094"
        app:srcCompat="@drawable/icanchor" />

    <Button
        android:id="@+id/start"
        android:layout_width="290dp"
        android:layout_height="58dp"
        android:background="@drawable/start_des"
        android:text="@string/start"
        android:textColor="@color/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anchor"
        app:layout_constraintVertical_bias="0.547" />

    <Button
        android:id="@+id/stop"
        android:layout_width="290dp"
        android:layout_height="58dp"
        android:background="@drawable/stop_des"
        android:text="@string/stop"
        android:textColor="@color/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start"
        app:layout_constraintVertical_bias="0.28" />

</androidx.constraintlayout.widget.ConstraintLayout>